# marvin

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  TODO.md  get_version.py  isort.cfg  readthedocs.yml  requirements.txt  requirements_core.txt  requirements_dev.txt  requirements_doc.txt  requirements_web.txt  setup.cfg  setup.py  tasks.py  test.commit
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docker.yml  release.yml  test.yml
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose-dev.yml  docker-compose.yml  gunicorn_config.py  nginx.conf
docs/: Mode_Decision_Tree.graffle  marvin_cheatsheet.key
docs/dbschema/: mangaauxdb_schema.graffle  mangadapdb_schema.graffle  mangadatadb_schema.graffle  mangasampledb_schema.graffle
docs/sphinx/: Makefile  api.rst  apiref.rst  boolean-search-tutorial.rst  changelog.rst  cheatsheet.rst  citation.rst  conf.py  conf_bootstrap.py  contributing.rst  core.rst  data-access-modes.rst  exercises.rst  faq.rst  first-steps.rst  flask_profiler.sql  full_query_params.rst  general.rst  getinvolved.rst  getting-started.rst  getting-started_old.rst  images.rst  index.rst  index_old.rst  installation.rst  installation_old.rst  known-issues.rst  known_issues.rst  lean_tutorial.rst  maps-properties-channels.rst  marvin_tools.rst  mode_decision.rst  overview.rst  queries.rst  query-examples.rst  query-params.rst  query.rst  query_params.rst  results.rst  server_change.rst  (+9 more)
etc/: .netrc.enc  Gruntfile.js  config.ini  marvin.module  marvin.table  package.json
python/mangasas/: profile_mangasas.py  run_mangasas.py
python/marvin/: __init__.py  app.config  profile_marvin.py  run_marvin.py
python/sdss_marvin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .test_durations  __init__.py  conftest.py  test_imports.py
tests/api/: __init__.py  conftest.py  test_base.py  test_cube.py  test_general.py  test_interaction.py  test_maps.py  test_modelcube.py  test_plate.py  test_query.py  test_rss.py  test_spaxel.py
tests/cassettes/: marvin.temptest.conftest.test_beta.json  marvin.tests.conftest.test_beta.json
tests/contrib/: test_vacs.py
tests/core/: test_config.py  test_marvin_pickle.py
tests/data/: urlmap.json
tests/misc/: test_misc.py  test_sampledb.py
tests/prof/: combined.prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes0].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes10].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes11].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes12].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes13].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes14].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes15].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes16].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes17].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes18].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes19].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes1].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes20].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes21].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes22].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes23].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes24].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes25].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes26].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes2].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes3].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes4].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes5].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes6].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes7].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes8].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-7443-12701-cube_maps_modelcube_modes9].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes0].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes10].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes11].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes12].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes13].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes14].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes15].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes16].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes17].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes18].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes19].prof  test_SpaxelBase[MPL-8-HYB10-MILESHC-MILESHC-8485-1901-cube_maps_modelcube_modes1].prof  (+3272 more)
tests/tools/: test_aperture.py  test_cube.py  test_image.py  test_map.py  (+9 more)
(+718 files in other folders)
