[metadata]
name = sdss-marvin
version = 2.8.0dev
author = The Marvin Developers
author_email = havok2063@hotmail.com
description = Toolsuite for dealing with the MaNGA dataset
url = https://github.com/sdss/marvin
project_urls =
	Repository = https://github.com/sdss/marvin
	Documentation = https://sdss-marvin.readthedocs.org
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, software, marvin, manga, MaNGA
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Topic :: Database :: Front-Ends
    Topic :: Documentation :: Sphinx
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
package_dir =
	= python
include_package_data = True
install_requires =
    # sdss reqs
	sdsstools>=0.4
	sdss-tree>=3.1.0
	sdss-access>=2.0
    marvin-brain>=0.3
    marvin-sqlalchemy-boolean-search>=0.2
    marvin-wtforms-alchemy>=0.18.0
    # all else
    # utility
	astropy>=5.1
    fuzzywuzzy>=0.15.0
    python-Levenshtein>=0.12.0
    raven>=5.32.0,<7.0
    packaging>=20.1,<21.0
    yamlordereddictloader>=0.2.2
    # numerical
    numpy>1.20
    scipy>=0.18.1
    # plotting
    pandas>=1.0
    matplotlib>=1.5.3
    # api / web
    webargs>=1.5.2,<6.0
    werkzeug>=2.0,<2.1
    Flask-JWT-Extended>=3.8.1,<4.0
    numpyencoder>=0.3
    # database
    dogpile.cache>=0.6.2,<1.1

scripts =
    bin/run_marvin
    bin/check_marvin

[options.packages.find]
where =
	python
exclude=
    marvin.web*

[options.package_data]
marvin =
	data/*

[options.extras_require]
extra=

dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-cov>=2.8.1
	pytest-sugar>=0.9.4
	pytest-remotedata>=0.3.2
    pytest-flask>=0.10.0
    pytest-xdist>=1.18.1
    pytest-timeout>=1.2.0
	pytest-mock>=1.13.0
	isort>=4.3.21
    coveralls>=1.1
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	# The following are needed because sdsstools[dev] as an extra not always
	# gets installed. See https://github.com/pypa/pip/issues/4957.
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
    # other dev depends - e.g. web tests
    #uwsgi>=2.0.15  # install with "conda install -c conda-forge uwsgi" instead
    psycopg2>=2.6.2,<3.0
    selenium>=3.3.1
    page_objects>=1.1.0
    decorator>=4.1.2
    pympler>=0.5
    mpl-scatter-density>=0.4
    msgpack>=0.5.4
    msgpack-numpy>=0.4.2
    Flask-Testing>=0.6.1
docs =
	Sphinx>=3.1.0
	sphinx_bootstrap_theme>=0.4.12
    sphinxcontrib-httpdomain>=1.5.0
    sphinx_issues>=1.0.0
    sphinx-rtd-theme>=0.4.2
    nbsphinx>=0.3.5
    # added for rtd issues
    photutils>=0.7
    mpl-scatter-density>=0.4
    jupyter_client>=5.2.3
    ipykernel>5.0
web=
    blinker>=1.4
    Flask>=2
    werkzeug>=2,<2.1
    Flask-FeatureFlags>=0.6
    Flask-Compress>=1.4
    Flask-Limiter>=0.9.4
    flask-profiler>=1.0.1
    Flask-Caching>=1.4.0
    Flask-Login>=0.4.1
    Flask-Cors>=3.0.8
    Flask-Session>=0.3.1
    redis>=3.3
    #uwsgi>=2.0.15  # install with "conda install -c conda-forge uwsgi" instead
    # added for rtd issues
    validators>=0.10.3
    intervals>=0.8.0
db=
    pgpasslib>=1.1.0
    psycopg2>=2.6.2
    Flask-Login>=0.4.1
    sqlalchemy>=1.3,<2.0


[bdist_wheel]
universal=1

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = marvin
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov marvin --cov-report html -W ignore
markers =
    slow: marks tests that are slow to run
	uses_db: marks tests as needing a connected local manga database
	uses_web: marks test as needed a connected local marvin web server

[coverage:run]
branch = true
include =
	python/marvin/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
